<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_bg_dark">

    <ImageView
            android:layout_width="150dp"
            android:layout_height="250dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/image"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:scaleType="fitXY"/>

    <TextView
            android:text="@string/name_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            android:layout_marginStart="8dp"
            android:textColor="@android:color/white"
            android:textSize="14sp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/imageView2"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            android:layout_marginStart="8dp"
            android:textColor="@android:color/white"
            android:textSize="14sp"/>

    <TextView
            android:text="@string/age_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/imageView3"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/age"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            android:layout_marginStart="8dp"/>

    <TextView
            android:text="@string/weight_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/imageView4"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/weight"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            android:layout_marginStart="8dp"/>

    <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/user"
            android:id="@+id/imageView2"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image"
            android:layout_marginStart="8dp"/>
    <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/ic_heart"
            android:id="@+id/imageView3"
            app:layout_constraintStart_toEndOf="@+id/image"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"/>
    <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/ic_steak"
            android:id="@+id/imageView4"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            app:layout_constraintStart_toEndOf="@+id/image"
            android:layout_marginStart="8dp"/>

    <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/ic_ladders"
            android:id="@+id/imageView5"
            app:layout_constraintStart_toEndOf="@+id/image"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"/>

    <TextView
            android:text="@string/height_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/imageView5"
            app:layout_constraintStart_toEndOf="@+id/imageView5"
            android:layout_marginStart="8dp"
            android:typeface="normal"
            android:textColor="@android:color/white"/>

    <TextView
            android:id="@+id/height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintStart_toEndOf="@+id/imageView5"
            android:layout_marginStart="8dp"
            android:textColor="@android:color/white"/>

    <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/ic_hair"
            android:id="@+id/imageView6"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/image" />

    <TextView
            android:id="@+id/textView6"
            android:text="@string/hair_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/imageView6"
            app:layout_constraintStart_toEndOf="@+id/imageView6"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

    <TextView
            android:id="@+id/hair"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:layout_constraintStart_toEndOf="@+id/imageView6"
            android:layout_marginStart="8dp"/>

    <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/ic_axe"
            android:id="@+id/imageView7"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView6"/>

    <TextView
            android:text="@string/professions_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            app:layout_constraintStart_toEndOf="@+id/imageView7"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/imageView7"
            android:textColor="@android:color/white"/>

    <TextView
            android:id="@+id/professions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintStart_toEndOf="@+id/imageView7"
            android:layout_marginStart="8dp"/>

    <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/ic_friends"
            android:id="@+id/imageView8"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/professions"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
            android:text="@string/friends_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/imageView8"
            app:layout_constraintStart_toEndOf="@+id/imageView8"
            android:layout_marginStart="8dp"
            android:textColor="@android:color/white"/>

    <TextView
            android:id="@+id/friends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            app:layout_constraintStart_toEndOf="@+id/imageView8"
            android:layout_marginStart="8dp"
            android:textColor="@android:color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>